fix: rename to weather-forecast-server

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "Steeltoe": "Information",
-      "WeatherServer": "Debug"
+      "WeatherForecastServer": "Debug"
     }
   }
 }
