--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "Steeltoe": "Debug",
-      "WeatherServer": "Information",
+      "WeatherForecastServer": "Information",
       "MonitorRabbitMQ": "Warning"
     }
   },
