--- a/WeatherForecastServer.csproj
+++ b/WeatherForecastServer.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <Description>WeatherServer project</Description>
+    <Description>WeatherForecastServer project</Description>
   </PropertyGroup>
 
   <PropertyGroup>
