--- a/k8s/helm/chart/weather-forecast-server/Chart.yaml
+++ b/k8s/helm/chart/weather-forecast-server/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: weather-server
+name: weather-forecast-server
 description: Weather Server demo
 
 # A chart can be either an 'application' or a 'library' chart.
