--- a/k8s/helm/chart/weather-forecast-server/templates/hpa.yaml
+++ b/k8s/helm/chart/weather-forecast-server/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "weather-server.fullname" . }}
+  name: {{ include "weather-forecast-server.fullname" . }}
   labels:
-    {{- include "weather-server.labels" . | nindent 4 }}
+    {{- include "weather-forecast-server.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "weather-server.fullname" . }}
+    name: {{ include "weather-forecast-server.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
