--- a/k8s/helm/chart/weather-forecast-server/templates/service.yaml
+++ b/k8s/helm/chart/weather-forecast-server/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "weather-server.fullname" . }}
+  name: {{ include "weather-forecast-server.fullname" . }}
   labels:
-    {{- include "weather-server.labels" . | nindent 4 }}
+    {{- include "weather-forecast-server.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "weather-server.selectorLabels" . | nindent 4 }}
+    {{- include "weather-forecast-server.selectorLabels" . | nindent 4 }}
