--- a/k8s/helm/chart/weather-forecast-server/templates/serviceaccount.yaml
+++ b/k8s/helm/chart/weather-forecast-server/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "weather-server.serviceAccountName" . }}
+  name: {{ include "weather-forecast-server.serviceAccountName" . }}
   labels:
-    {{- include "weather-server.labels" . | nindent 4 }}
+    {{- include "weather-forecast-server.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
