--- a/k8s/helm/chart/weather-forecast-server/values.yaml
+++ b/k8s/helm/chart/weather-forecast-server/values.yaml
@@ -1,12 +1,12 @@
-# Default values for weather-server.
+# Default values for weather-forecast-server.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: localhost:5001/weather-server
-  name: weather-server
+  repository: localhost:5001/weather-forecast-server
+  name: weather-forecast-server
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
@@ -53,12 +53,12 @@ ingress:
       kubernetes.io/ingress.class: nginx
       kubernetes.io/tls-acme: "true"
   hosts:
-    - host: weather-server.local
+    - host: weather-forecast-server.local
       paths:
         - path: /
           pathType: Prefix
           backend:
-            serviceName: weather-server-svc
+            serviceName: weather-forecast-server-svc
             servicePort: 80
   tls: []
   #  - secretName: chart-example-tls
