--- a/WeatherForecastServer.csproj
+++ b/WeatherForecastServer.csproj
@@ -1,15 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <Description>WeatherForecastServer project</Description>
+    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
   <PropertyGroup>
     <SteeltoeVersion>3.2.0</SteeltoeVersion>
   </PropertyGroup>
-
+  
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.*" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Steeltoe.Common.Hosting" Version="$(SteeltoeVersion)" />
